# TODO

./: .gitignore  Cargo.toml  todos.txt
libtodo/: Cargo.toml
libtodo/src/: dir.rs  file.rs  item.rs  lib.rs  prio.rs
todo/: Cargo.toml
todo/src/: display.rs  export.rs  main.rs  scan.rs
todo_disp/: Cargo.toml
todo_disp/src/: args.rs  handle_args.rs  main.rs
todo_fetch/: Cargo.toml
todo_fetch/src/: args.rs  handle_args.rs  main.rs
