[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.4", features = ["derive"]}
libtodo = { path = "../libtodo" }
serde_json = "1.0.117"
inline_colorization = "0.1.6"